[package]
name = "easy_fs"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.8"}

[profile.release]
debug = true