[package]
name = "os"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy_fs = { path = "../easy_fs" }
riscv = { version = "0.13.0" }
buddy_system_allocator = {version = "0.11.0"}
sbi-rt = { version = "0.0.3", features = ["legacy"] }
bitflags = { version = "2.4.2" }
lazy_static ={ version = "1.4.0", features = ["spin_no_std"]}
xmas-elf = { version = "0.9.1" }
spin = { version = "0.9.8" }
fdt = { version = "0.1.5" }
virtio-drivers = { version = "0.9.0" }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
